avoid horizontal scrollbar

--- a/web/public/routes/video/video.css
+++ b/web/public/routes/video/video.css
@@ -164,6 +164,7 @@
 }
 
 .video-frames {
+  overflow-x: hidden;
   overflow-y: scroll;
   padding-bottom: 20px;
 }
